--- a/app/develop/scss/_settings.scss
+++ b/app/develop/scss/_settings.scss
@@ -86,14 +86,14 @@
 // $headers: "h1,h2,h3,h4,h5,h6";
 
 // We use these to define default font weights
-// $font-weight-normal: normal;
-// $font-weight-bold: bold;
+ $font-weight-normal: 400;
+ $font-weight-bold: 700;
 
 // We use these to control various global styles
 // $body-background: #fff;
 // $body-font-color: #222;
-// $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
-// $body-font-weight: $font-weight-normal;
+ $body-font-family: "Arimo", "Helvetica Neue", Helvetica, Arial, sans-serif;
+ $body-font-weight: 400;
 // $body-font-style: normal;
 // $body-antialiased: true;
 
@@ -102,7 +102,7 @@
  $secondary-color: #fb5000;
  $alert-color: #F04124;
  $info-color: #A0D3E8;
- $success-color: #43AC6A;
+ $success-color: #53c644;
  $warning-color: #F08A24;
  $dark-color: #232323;
  $gray: #dfdfdf;
@@ -110,8 +110,8 @@
  $gray-light: lighten($gray, 8);
 
 // We use these to make sure border radius matches unless we want it different.
-// $global-radius: 4px;
-// $global-rounded: 1000px;
+ $global-radius: 4px;
+ $global-rounded: 1000px;
 
 // We use this for default spacing
 // $global-padding: 1rem;
@@ -137,7 +137,7 @@
 
 // We use these to control header font styles
 // $header-font-family: $body-font-family;
-// $header-font-weight: $font-weight-normal;
+ $header-font-weight: $font-weight-bold;
 // $header-font-style: $font-weight-normal;
 // $header-font-color: #222;
 // $header-line-height: 1.4;
@@ -247,7 +247,7 @@
 // $button-background: $primary-color;
 // $button-background-hover: scale-color($button-background, $lightness: -15%);
 // $button-color: auto;
-// $button-radius: 0;
+ $button-radius: $global-radius;
 // $button-sizes: (
 //   tiny: 0.7,
 //   small: 0.8,
