--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7203,6 +7203,16 @@ meta.foundation-mq {
 .fa-btn-icon, .fa-edit-btn, .fa-share-btn {
   position: relative; }
 
+.fa-slide-up.ng-enter, .ng-enter.fa-edit-panel, .fa-slide-up.ng-hide-remove, .ng-hide-remove.fa-edit-panel {
+  transition-duration: 1s;
+  transition-timing-function: ease-in;
+  transition-delay: 0;
+  transition-property: transform, opacity;
+  backface-visibility: hidden;
+  transform: translateY(100%); }
+.fa-slide-up.ng-enter.ng-enter-active, .ng-enter.ng-enter-active.fa-edit-panel, .fa-slide-up.ng-hide-remove.ng-hide-remove-active, .ng-hide-remove.ng-hide-remove-active.fa-edit-panel {
+  transform: translateX(0) translateY(0); }
+
 .fa-header {
   display: flex;
   height: auto;
@@ -7384,7 +7394,8 @@ label {
   padding: 6.5px 30px 19px 30px;
   border: 1px solid #cacaca;
   margin-bottom: 30px;
-  border-radius: 4px; }
+  border-radius: 4px;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.3); }
   .fa-editable-msg p {
     font-family: 'Delius Swash Caps', cursive;
     text-indent: 0;
