--- a/app/views/main.html
+++ b/app/views/main.html
@@ -19,7 +19,7 @@
         </div>
 
         <div class="fa-card-opt-area">
-            <div class="fa-card">
+            <div class="fa-card" style="text-align:center; background:beige">
                 <img id="card_img" ng-src="images/{{mainurl}}">
             </div>
             <div class="fa-card-nav-area">
@@ -37,7 +37,7 @@
         <div class="fa-edit-panel" id="fa-edit-panel" ng-show="toggler">
            <div class="fa-edit-options">
               <label class="">Click on the message below to edit it</label>
-               <div class="fa-editable-msg" id="message">
+               <div class="fa-editable-msg" id="message" ng-bind-html="textwritup">
                    <p>The dark ones run when they see the sun.</p>
                    <p>But you and I, we only run for fun.</p>
                    <p>My BBF Forever:</p>
@@ -96,6 +96,6 @@
                 <li><a>Privacy Policy</a></li>
                 <li><a>About Minimie</a></li>
             </ul>
-            <img src="images/fa-bg-pattern.png" width="1" height="1" id="imgbg"/>
+            <img src="images/card_bg.jpg" width="0" height="0" id="imgbg"/>
         </div>
 </div>
