--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7204,7 +7204,7 @@ meta.foundation-mq {
   position: relative; }
 
 .fa-slide-up.ng-enter, .ng-enter.fa-edit-panel, .fa-slide-up.ng-hide-remove, .ng-hide-remove.fa-edit-panel {
-  transition-duration: 1s;
+  transition-duration: 0.8s;
   transition-timing-function: ease-in;
   transition-delay: 0;
   transition-property: transform, opacity;
@@ -7212,6 +7212,16 @@ meta.foundation-mq {
   transform: translateY(100%); }
 .fa-slide-up.ng-enter.ng-enter-active, .ng-enter.ng-enter-active.fa-edit-panel, .fa-slide-up.ng-hide-remove.ng-hide-remove-active, .ng-hide-remove.ng-hide-remove-active.fa-edit-panel {
   transform: translateX(0) translateY(0); }
+
+.fa-slide-down.ng-leave, .ng-leave.fa-edit-panel, .fa-slide-down.ng-hide-add, .ng-hide-add.fa-edit-panel {
+  transition-duration: 0.8s;
+  transition-timing-function: ease-in;
+  transition-delay: 0;
+  transition-property: transform, opacity;
+  backface-visibility: hidden;
+  transform: translateX(0) translateY(0); }
+.fa-slide-down.ng-leave.ng-leave-active, .ng-leave.ng-leave-active.fa-edit-panel, .fa-slide-down.ng-hide-add.ng-hide-add-active, .ng-hide-add.ng-hide-add-active.fa-edit-panel {
+  transform: translateY(100%); }
 
 .fa-header {
   display: flex;
@@ -7300,14 +7310,36 @@ meta.foundation-mq {
   margin-right: 20px; }
 
 .fa-card-opt-area {
-  min-height: 450px;
-  padding: 100px 100px 30px; }
+  display: flex;
+  height: auto;
+  position: relative;
+  overflow: hidden;
+  backface-visibility: hidden;
+  flex: 1 1 auto;
+  flex-flow: row wrap;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: center;
+  order: 0;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
+  min-height: 580px; }
 
 .fa-card {
-  width: 100%;
+  display: block;
+  padding: 0 1rem;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
+  flex: 0 0 66.66667%;
+  max-width: 66.66667%;
+  min-height: 350px;
   border: 15px solid #fff;
   background-color: #fff;
-  border-radius: 4px; }
+  border-radius: 4px;
+  margin-top: 100px;
+  background-image: url(../../images/img-bg.png); }
 
 .fa-card-nav-area {
   display: flex;
@@ -7315,7 +7347,8 @@ meta.foundation-mq {
   position: relative;
   overflow: hidden;
   backface-visibility: hidden;
-  flex: 1 1 auto;
+  flex: 0 0 66.66667%;
+  max-width: 66.66667%;
   flex-flow: row wrap;
   flex-wrap: nowrap;
   align-items: stretch;
@@ -7324,7 +7357,8 @@ meta.foundation-mq {
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
   -ms-overflow-style: -ms-autohiding-scrollbar;
-  margin-top: 30px; }
+  margin-top: 30px;
+  margin-bottom: 30px; }
 
 .fa-card-nav-prev {
   display: block;
@@ -7356,6 +7390,8 @@ label {
   font-weight: bold; }
 
 .fa-edit-panel {
+  position: absolute !important;
+  z-index: 1000;
   display: flex;
   height: auto;
   position: relative;
@@ -7370,16 +7406,15 @@ label {
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
   -ms-overflow-style: -ms-autohiding-scrollbar;
-  justify-content: center;
   flex-flow: column nowrap;
   align-items: stretch;
   min-height: 300px;
   background-color: #fafafa;
-  padding-bottom: 20px;
-  padding-top: 30px; }
+  padding-bottom: 30px;
+  padding-top: 60px; }
 
 .fa-edit-options {
-  max-width: 60%;
+  max-width: 80%;
   margin: 0 auto; }
 
 .fa-editable-msg {
@@ -7391,6 +7426,7 @@ label {
   flex: 1 1 auto;
   background: whitesmoke;
   background: repeating-linear-gradient(#fff, #fff 29px, #d9eaf3 29px, #d9eaf3 30px, #fff 30px);
+  max-width: 400px;
   padding: 6.5px 30px 19px 30px;
   border: 1px solid #cacaca;
   margin-bottom: 30px;
