Signed-off-by: buchanora <buchanora@gmail.com>

--- a/app/develop/scss/main.scss
+++ b/app/develop/scss/main.scss
@@ -4,7 +4,7 @@
 // Licensed under MIT Open Source
 
 @charset 'utf-8';
-@import url(http://fonts.googleapis.com/css?Delius+Swash+Caps|Coming+Soon|Arimo:400,700,400italic);
+@import url(http://fonts.googleapis.com/css?family=Delius+Swash+Caps|Coming+Soon|Arimo:400,700,400italic);
 
 @import 'foundation';
 @import 'settings';
