--- a/app/develop/scss/main.scss
+++ b/app/develop/scss/main.scss
@@ -5,10 +5,6 @@
 
 @charset 'utf-8';
 @import url(http://fonts.googleapis.com/css?family=Delius+Swash+Caps|Coming+Soon|Arimo:400,700,400italic);
-<<<<<<< HEAD
-
-=======
->>>>>>> ac58b42e34c5ed0f4df915d1f0875126aae68bb4
 @import 'foundation';
 @import 'settings';
 @import 'motion-ui';
@@ -187,55 +183,74 @@ $foundation-version: '1.2.0';
 .fa-card-opt-area{
     @include grid-block(
         $align:center,
-        $wrap:true
+        $orientation:vertical
+//        $wrap:true
         );
     min-height: 580px;
+    position: relative;
 //    padding: 100px 100px 30px;
 }
 
 .fa-intro{
+//    @include grid-content(
+//        $size:expand
+////        $align:center
+//        );
+    margin-top: 20px;
+    p{
+        text-align: center;
+        color: #fff;
+        font-size: 1.2rem;
+        line-height: 1;
     }
+}
+
+.fa-card-wrap{
+    @include grid-container(
+        $width:70%,
+        $align:center
+        );
+}
 
 .fa-card{
-    @include grid-content(
-        $size:8
-//        $offset:2
-        );
+//    @include grid-content(
+//        $size:12
+////        $offset:2
+//        );
     min-height: 350px;
     border: 15px solid #fff;
     background-color: #fff;
     border-radius: $global-radius;
-    margin-top: 100px;
+    margin-top: 10px;
     background-image: url(../../images/img-bg.png);
+    background-size: cover;
 }
 
 .fa-card-nav-area{
-    @include grid-block(
-        $size:8
-        );
-    margin-top:30px;
-    margin-bottom: 30px;
-//    height: 50px;
+    display: flex;
+    justify-content: space-between;
+    margin: 20px auto;
 }
 
 .fa-card-nav-prev{
-    @include grid-content(
-        $size:3
-    );
+//    @include grid-content(
+//        $size:3
+//    );
     img{
         height:40px;
     }
 }
 
-//.fa-card-nav-count{
-//    @include grid-block(6);
-//}
+.fa-card-nav-count{
+    color: #fff;
+//    font-weight:bold;
+}
 
 .fa-card-nav-next{
-    @include grid-content(
-        $size:3,
-        $offset:6
-    );
+//    @include grid-content(
+//        $size:3
+//        $offset:6
+//    );
     img{
         height:40px;
         float: right;
@@ -252,35 +267,45 @@ label{
 }
 
 .fa-edit-panel{
-    position: absolute!important;
-    z-index: 1000;
-//    float:right;
-    @extend .fa-slide-up;
-    @extend .fa-slide-down;
-    @include grid-block(
-        $size:expand
+     @include grid-container(
+        $width:80%,
+        $align:center
         );
+//    position: absolute!important;
+    z-index: 1000;
+    top:0;
+//    width: 70%;
+//    width: 70%;
+    min-height: 600px;
+    margin: 0 auto;
+//    overflow: scroll;
+    @extend .fa-slide-up;
+//    @extend .fa-slide-down;
+//    @include grid-block(
+//        $size:expand
+//        );
 //    @include grid-align(center);
-    @include grid-orient(vertical);
-    min-height: 300px;
+//    @include grid-orient(vertical);
     background-color: lighten(#e3e3e3,9);
     padding-bottom: 30px;
     padding-top: 60px;
 }
 
 .fa-edit-options{
-    @include grid-container(
-        $width:80%,
-        $align:center
-        );
+    margin: 0 auto;
+    width: 90%;
+//    @include grid-container(
+//        $width:80%,
+//        $align:center
+//        );
 //    @include grid-orient(vertical);
 //    @include grid-align(center);
 }
 
 .fa-editable-msg{
-    @include grid-content(
-        $size:expand
-        );
+//    @include grid-content(
+//        $size:expand
+//        );
 
     background: lighten(#e3e3e3,7);
     background: repeating-linear-gradient(#fff, #fff 29px, #d9eaf3 29px, #d9eaf3 30px, #fff 30px  );
